projects/ingress-load-balancer/deploy-with-v1app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ingress-test
    version: v1
  name: ingress-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-test
      version: v1
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxSurge: 1
     maxUnavailable: 1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ingress-test
        version: v1
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:1.0
        name: hello-app
        resources: {}
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ingress-test
    version: v1
  name: web1
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: ingress-test
    version: v1
  type: ClusterIP
