projects/ingress-load-balancer/deploy-with-v2app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: web2
  name: web2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web2
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:2.0
        name: hello-app
        resources: {}
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ingress-test
  name: web2
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: web2
  type: ClusterIP
